# netcalc-rs

./: .gitignore  Cargo.toml  Dioxus.toml  README.en.md  README.fr.md  README.md  arch
assets/: main.css  themes.css
assets/css/: base.css  components.css  layout.css  variables.css
assets/js/: index.js
debian/: netcalc-rs.desktop
scripts/: install_netcalc-rs.sh  uninstall_netcalc-rs.sh
src/: address.rs  display_table.rs  lib.rs  main.rs
src/components/: app.rs  broadcast.rs  help.rs  home.rs  host_count.rs  ip_range.rs  mod.rs  sidebar.rs  subnet_mask.rs  subnet_split.rs  switcher.rs  widget.rs
src/components/widgets/: calculator_net_address.rs  find_broadcast_addr.rs  find_ips_addr.rs  find_mask.rs  mod.rs  subnetting.rs  utils.rs
